--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">material</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
+    <string name="image">Image</string>
+
+    <!-- Menu Actions -->
     <string name="action_settings">Settings</string>
+
 </resources>
